feat(render): add header

--- a/assets/style.css
+++ b/assets/style.css
@@ -9,6 +9,7 @@
   margin: 0;
 }
 html, body {
+  font-size: 62.5%;
   height: 100%;
 }
 body {
@@ -30,4 +31,9 @@ p, h1, h2, h3, h4, h5, h6 {
 */
 #root, #__next {
   isolation: isolate;
+}
+
+header > h1 {
+  font-size: 2.8rem;
+  padding: 10px 20px;
 }
