--- a/assets/style.css
+++ b/assets/style.css
@@ -37,3 +37,50 @@ header > h1 {
   font-size: 2.8rem;
   padding: 10px 20px;
 }
+
+h2 {
+  font-size: 2.5rem;
+  margin-top: 20px;
+}
+
+h3 {
+  font-size: 2rem;
+  margin-top: 16px;
+}
+
+p, span, li {
+  font-size: 1.6rem;
+}
+
+ul {
+  padding-left: 30px;
+}
+
+pre, code {
+  background-color: #383838;
+}
+
+pre {
+  margin-top: 5px;
+  padding: 10px 15px 20px;
+  border-radius: 3px;
+}
+
+code {
+  background-color: #383838;
+  font-size: 1.3rem;
+  color: #fff;
+  padding: 2px 5px;
+  border-radius: 3px;
+}
+
+pre > code {
+  padding: 0;
+  border-radius: 0;
+}
+
+main {
+  margin-right: 5%;
+  margin-left: 5%;
+  padding-bottom: 50px;
+}
